package impl;

import model.Persona;

public interface ServicioVacunacion {
    String vacunar(Persona persona);
}
